[package]
name = "redstone"
version = "1.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.5.4"
rfd = "0.14.0"
tokio = { version = "1", features = ["net", "fs", "io-util", "macros", "rt-multi-thread"] }
crossterm = "0.27.0"

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["crossterm-backend"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
